// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SEO renders correctly 1`] = `
<Head>
  <title>
    ajdurancr
  </title>
</Head>
`;

exports[`SEO renders correctly with page title 1`] = `
<Head>
  <title>
    Welcome - ajdurancr
  </title>
</Head>
`;
